# upxgui

./: .gitignore  .gitmodules  ARCHITECTURE.md  BUILD.md  CNAME  INSTALL.md  README.md  USAGE.md  upxgui.sln
upxgui/: framework.h  pch.h  resource.h  upx_inproc.cpp  upx_inproc.h  upxgui.cpp  upxgui.h  upxgui.rc  upxgui.vcxproj  upxgui.vcxproj.filters  upxguiDlg.cpp  upxguiDlg.h
upxgui/res/: upxgui.rc2
upxlib/: CMakeLists.txt
